--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,8 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-ultra: var(--font-ultra);
-  --font-josefin: var(--font-josefin-sans);
+  --font-josefin: var(--font-josefin);
+  --font-playwrite: var(--font-playwrite);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
