--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --font-ultra: var(--font-ultra);
   --font-josefin: var(--font-josefin);
   --font-playwrite: var(--font-playwrite);
+  --font-alegreya: var(--font-alegreya);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
